# Velce

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  Velce.sln  imgui.ini  todo.txt
Assets/Animations/: Player_Animation.controller  mc_idle.anim  mc_jumping.anim
Assets/Animations/Heart/: Heart.controller
Assets/Animations/Player/: mc_death.anim  mc_falling.anim  mc_idle.anim  mc_jumping.anim  mc_punch_1.anim  mc_punch_back_running.anim  mc_punch_back_still.anim  mc_punch_front_running.anim  mc_punch_front_still.anim  mc_running.anim  player_animator.controller
Assets/Animations/Tardigrade/: running.anim
Assets/Materials/: Damage.mat  Death.mat  Player Material.mat
Assets/Palettes/: Ground Tiles.prefab  GroundPalette.prefab
Assets/Physics Materials/: No Friction.physicsMaterial2D
Assets/Prefabs/: Player.prefab
Assets/Prefabs/Enemies/: Klicker.prefab  Slitter.prefab  Tardigrade.prefab
Assets/Prefabs/Pickups/: Adenine.prefab  Cytosine.prefab  Guanine.prefab  Thymine.prefab
Assets/Prefabs/UI/: Heart.prefab
Assets/Scenes/: SampleScene.unity  World1Scene1.unity  balh.unity
Assets/Scripts/: LoadScene.cs  Parallax.cs  PlayerAnimation.cs  PlayerMovement.cs
Assets/Scripts/Enemies/: EnemyAI.cs  (+4 more)
Assets/Shaders/: Damage.shadergraph  Death.shadergraph  Player Shader.shadergraph  URP.asset
Assets/Tiles/: Auto Tileset.asset
Assets/URP/: URP.asset
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  QualitySettings.asset  TagManager.asset
Velce/: Actor.cpp  Actor.h  Animator.cpp  Animator.h  Debug.h  Editor.cpp  Editor.h  Editor.h.gch  Engine.cpp  Engine.h  Game.cpp  Game.h  InputHandler.cpp  InputHandler.h  Player.cpp  Player.h  Sector.cpp  Sector.h  Tile.cpp  Tile.h  Utils.h  Velce.vcxproj  Velce.vcxproj.filters  World.h  imgui.ini  resource1.h  todo.txt
Velce/ProjectSettings/: ProjectSettings.asset
res/data/: example.sect
src/: Actor.cpp  Actor.h  Animator.h  Camera.cpp  Camera.h  Editor.cpp  Editor.h  Engine.cpp  Engine.h  Game.cpp  Game.h  Gate.cpp  Gate.h  Logger.h  Player.cpp  Player.h  Sector.cpp  Sector.h  SectorSerializer.cpp  SectorSerializer.h  Tile.cpp  Tile.h  UISector.cpp  UISector.h  Utils.h  Velce.cpp  World.cpp  World.h
(+372 files in other folders)
